--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -27,7 +27,8 @@ citation: 20200611_AIBS_mouse (2021). (Version draft) [Data set]. DANDI archive.
 description: Allen Institute June 2020 Mouse PatchSeq icephys data
 id: DANDI:000020/draft
 identifier: DANDI:000020
-manifestLocation: []
+manifestLocation:
+- https://api.dandiarchive.org/api/dandisets/000020/versions/draft/assets/
 name: 20200611_AIBS_mouse
 repository: https://dandiarchive.org/
 schemaKey: Dandiset
